create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1842,6 +1842,11 @@ section.lazy-placeholder:after {
 .cid-s3O7BspD6a .dropdown-item:hover {
   color: #c1c1c1 !important;
 }
+.cid-s3Sy8ICFCi {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #969696;
+}
 .cid-s3O43sh4xN {
   padding-top: 60px;
   padding-bottom: 0px;
@@ -2320,11 +2325,6 @@ section.lazy-placeholder:after {
 }
 .cid-s3NRrmVWX6 .media-container-row .row-copirayt p {
   width: 100%;
-}
-.cid-s3SjAkKPgH {
-  padding-top: 15px;
-  padding-bottom: 15px;
-  background-color: #969696;
 }
 .cid-s3O7BspD6a .navbar {
   padding: .5rem 0;
